# pinefarm

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  README.md  pinefarm.toml  pyproject.toml
.github/workflows/: generators.yml  unittests.yml
benchmarks/data/: 401.yaml
docs/source/: cli.rst  conf.py  index.rst  install.rst  output.rst  pinecards.rst  refs.bib  run.rst
docs/source/pinecards/: index.rst  postrun.rst
docs/source/shared/: abbreviations.rst
examples/: .gitignore
extras/theories/: theory_nnlo.yaml
scripts/: matrix_yttbar.py
src/pinefarm/: __init__.py  configs.py  info.py  install.py  log.py  table.py  tools.py
src/pinefarm/cli/: __init__.py  _base.py  autogen.py  configs.py  info.py  install.py  list.py  merge.py  run.py  update.py
tests/: test_pinefarm.py
